--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: generate animation
+name: Generate Animation
 
 on:
   # run automatically every 6 hours
-  schedule:
-    - cron: "0 */6 * * *" 
+  # schedule:
+  #   - cron: "0 */6 * * *" 
   
   # allows to manually run the job at any time
   workflow_dispatch:
@@ -16,17 +16,33 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    # timeout-minutes: 10
     
     steps:
-      - uses: actions/checkout@v3
+      # - uses: actions/checkout@v3
       
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v1.1.2
+        uses: Platane/snk@v2
         with:
-          github_user_name: alextavella
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          # github user name to read the contribution graph from (**required**)
+          # using action context var `github.repository_owner` or specified user
+          github_user_name: ${{ github.repository_owner }}
+          # svg_out_path: dist/github-contribution-grid-snake.svg
+
+          # list of files to generate.
+          # one file per line. Each output can be customized with options as query string.
+          #
+          #  supported options:
+          #  - palette:     A preset of color, one of [github, github-dark, github-light]
+          #  - color_snake: Color of the snake
+          #  - color_dots:  Coma separated list of dots color.
+          #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
+          #                 Exactly 5 colors are expected.
+          outputs: |
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
 
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
