--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,32 @@
 name: Generate Animation
 
 on:
-  # run automatically every 6 hours
-  # schedule:
-  #   - cron: "0 */6 * * *" 
-  
+  # run automatically every 24 hours
+  schedule:
+    - cron: "0 */24 * * *"
+
   # allows to manually run the job at any time
   workflow_dispatch:
-  
+
   # run on every push on the master branch
   push:
     branches:
-    - main
+      - main
 
 jobs:
   generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    # timeout-minutes: 10
-    
+    timeout-minutes: 5
+
     steps:
-      # - uses: actions/checkout@v3
-      
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk@v2
+      - uses: Platane/snk@v3
         with:
           # github user name to read the contribution graph from (**required**)
           # using action context var `github.repository_owner` or specified user
           github_user_name: ${{ github.repository_owner }}
-          # svg_out_path: dist/github-contribution-grid-snake.svg
 
           # list of files to generate.
           # one file per line. Each output can be customized with options as query string.
@@ -47,7 +45,7 @@ jobs:
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.6.0
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
